EMAILPLT-58:  Add 'word-wrap: break-word;' to the preview table to fix a text overflow issue
git-svn-id: https://source.jasig.org/portlets/email-preview/trunk@24141 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/webapp/css/email.css
+++ b/src/main/webapp/css/email.css
@@ -39,6 +39,7 @@
 .email-portlet-table th, .email-portlet-table td {
     border: 1px solid #CCC;
     cursor: auto;
+    word-wrap: break-word;
 }
 .email-portlet-table td div, .email-portlet-table td div a {
     white-space: nowrap;
